professor: lavorando sulle pagine

--- a/courses/app/views/common_editableSP.scala.html
+++ b/courses/app/views/common_editableSP.scala.html
@@ -81,6 +81,7 @@
       @if(user.isStudent()) {
         <a data-toggle="modal" href="@routes.Students.appreq()" class="btn btn-primary btn-large">Richiedi Approvazione</a>
       }
+    </p><!-- aggiunto io (fabbo); mancava? -->
   </div><!--span1 -->
 
   <div class="span6">
