--- a/courses/app/views/examResultsform.scala.html
+++ b/courses/app/views/examResultsform.scala.html
@@ -40,8 +40,8 @@
     </fieldset>
     
     <div class="actions">
-      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
-      <a data-dismiss="modal" href="#" class="btn btn-large btn-primary">Confirm</a>
+      <a href="@routes.Application.index" class="btn">Cancel</a>
+      <input type="submit" class="btn primary" value="Submit">
     </div>
         
     }
