--- a/courses/app/views/common_studentCareer.scala.html
+++ b/courses/app/views/common_studentCareer.scala.html
@@ -26,15 +26,15 @@
       <tbody>
         @for(enrollment <- enrollments) {
           <tr>
-            <td>@enrollment.getCourse.courseName</td>
-            <td>@if(enrollment.getCourse.professor != null)  { @enrollment.getCourse.getProfessor.lastName }</td>
-            <td>@enrollment.getCourse.printType</td>
+            <td>@enrollment.fetchCourse.courseName</td>
+            <td>@if(enrollment.fetchCourse.professor != null)  { @enrollment.fetchCourse.getProfessor.lastName }</td>
+            <td>@enrollment.fetchCourse.printType</td>
             <td>@enrollment.printResult</td>
             <td>@enrollment.qualification</td>
             <td>@enrollment.credits</td>
-            <td>@enrollment.getCourse.academicYear</td>
+            <td>@enrollment.fetchCourse.academicYear</td>
             <td>
-              <a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{enrollment.getCourse.courseID}">
+              <a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{enrollment.fetchCourse.courseID}">
                 <img src="@routes.Assets.at("images/details.png")" />
               </a>
             </td>
