--- a/courses/app/views/examResultsform.scala.html
+++ b/courses/app/views/examResultsform.scala.html
@@ -1,12 +1,8 @@
-@(course: Course, courseForm: Form[CourseEnrollment], submitController: play.api.mvc.Call)
+@(course: Course, enrollForms: List[Form[CourseEnrollment]], submitController: play.api.mvc.Call)
 
 @import helper._
 @import helper.twitterBootstrap._
-    
-@helper.form(action = submitController) {
-    <fieldset>
       <legend>Account informations</legend>
-      
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -16,32 +12,56 @@
           </tr>
         </thead>
         <tbody>
-          @for(enroll <- course.getCoursesEnrollment()) {
-            <tr>
-              <td>@enroll.getStudent().fullName</td>
-              <td>
-                <input type="text" name="qualification-@enroll.getStudent().userID" />
-                <!--@inputText(
-                  courseForm("qualification")
-                )-->
-              </td>
-              <td>
-                <input type="checkbox" name="passed-@enroll.getStudent().userID" value=""/>
-                <!--@checkbox(
-                  courseForm("passed"), 
-                  '_showConstraints -> false
-                )-->
-              </td>
-            </tr>
+            @for(form <- enrollForms) {
+              @helper.form(action = submitController) {
+                <tr>
+                  <fieldset>
+                    <input type="hidden" value="@form("enrollmentID").value" name="enrollmentID"/>
+                    <input type="hidden" value="@form("course.courseID").value" name="course.courseID"/>
+                    <input type="hidden" value="@form("student.userID").value" name="student.userID"/>
+                    <input type="hidden" value="@form("credits").value" name="credits"/>
+                    <input type="hidden" value="@form("enrolledAt").value" name="enrolledAt"/>
+                    <input type="hidden" value="@form("updatedAt").value" name="updatedAt"/>
+                    <input type="hidden" value="@form("approvedAt").value" name="approvedAt"/>
+                    <td>
+                      @if(form("student.fullName").value) {
+                        @form("student.fullName").value
+                      } else {
+                        @Student.find.byId(Integer.parseInt(form.data.get("student.userID"))).fullName
+                      }
+                    </td>
+                    <td>
+                      @inputText(
+                      form("qualification")
+                      )
+                    </td>
+                    <td>
+                      @if(form.value.isDefined) {
+                        @if(form.value.get.passed) {
+                          <input type="checkbox" name="passed" checked="checked">
+                        } else {
+                          <input type="checkbox" name="passed">
+                        }
+                      } else {
+                        @if(CourseEnrollment.find.byId(Integer.parseInt(form.data.get("enrollmentID"))).passed) {
+                            <input type="checkbox" name="passed" checked="checked">
+                        } else {
+                          <input type="checkbox" name="passed">
+                        }
+                      }
+                    </td>
+                  </fieldset>
+                  <td>
+                    <input type="submit" class="btn primary" value="Submit">
+                  </td>
+                </tr>
+              }
           }
         </tbody>
       </table>
-      
-    </fieldset>
-    
+
     <div class="actions">
       <a href="@routes.Application.index" class="btn">Cancel</a>
-      <input type="submit" class="btn primary" value="Submit">
     </div>
-        
-    }
+ 
+
