--- a/courses/app/views/admin_course_details.scala.html
+++ b/courses/app/views/admin_course_details.scala.html
@@ -5,11 +5,11 @@
 
 @admin_base(user) {
 
-<!-- Parte side -->
+<!-- Left side -->
 
 } {
 
-<!-- Parte centrale -->
+<!-- Central contents -->
 @helper.form(action = routes.Admins.editCourse(courseID))  {
     <fieldset>
         @inputText(
