--- a/courses/app/views/admin_courses.scala.html
+++ b/courses/app/views/admin_courses.scala.html
@@ -39,15 +39,15 @@
     </tbody>
   </table>
   <p align="right">
-    <a data-toggle="modal" href="#windowTitleDialog_newInternalCourse" class="btn btn-primary btn-large">Aggiungi Nuovo Corso Interno</a>
-    <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary btn-large">Aggiungi Nuovo Corso Esterno</a>
+    <a data-toggle="modal" href="#windowTitleDialog_newInternalCourse" class="btn btn-primary btn-large">Add new inner course</a>
+    <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary btn-large">Add new extern course</a>
     <a data-toggle="modal" href="@routes.Admins.oldcourses()" class="btn btn-primary btn-large">Show old courses</a>
     <br />
     <br />
 </div><!--span1 -->
 
 <div class="span6">
-  <h2>Filtro</h2>
+  <h2>Filter</h2>
 </div>
 
 <!-- modal new internal course -->
