--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -8,7 +8,7 @@
 
 } {
 
-<!-- corpo della pagina -->
+<!-- center of the page -->
 
 <div class="span6">
   <h2>Students</h2>
@@ -30,7 +30,7 @@
       }
     </tbody>
   </table>
-  <a data-toggle="modal" href="#windowTitleDialog_mailtoSR" class="btn btn-primary">Sodomizza nell'ano ritardatari</a>
+  <a data-toggle="modal" href="#windowTitleDialog_mailtoSR" class="btn btn-primary">Warn latecomer students</a>
   <a data-toggle="modal" href="#windowTitleDialog_newStudent" class="btn btn-primary">Create new student</a>
   <a data-toggle="modal" href="@routes.Admins.suspendedStudents" class="btn btn-primary">View suspended students</a>
   <br />
@@ -39,7 +39,7 @@
 
 <!--- LA RIMOZIONE DEI CORSI VERRA GESTITA NEL MODAL DETTAGLI -->
 <div class="span6">
-  <h2>Filtro</h2>
+  <h2>Filter</h2>
 </div>
 } {
 
@@ -51,16 +51,15 @@
     <a href="#" class="close" data-dismiss="modal">
       <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
     </a>
-    <h3>Avviso agli studenti ritardatari</h3>
+    <h3>Notification to the latecomer students</h3>
   </div>
   
   <div class="modal-body">
     <p>
-      Con questo form stai per inviare un sollecito tramite posta elettronica a tutti gli studenti che non hanno ancora definito uno study plan.<br />
-      Vuoi procedere con l'operazione?
+      With this form, you're about to send a notification by e-mail to urge all students who haven't defined a study plan yet.<br />Do you wish to continue?
     </p>
-    <a data-dismiss="modal" href="#" class="btn btn-large">Annulla</a>
-    <a data-dismiss="modal" href="#" class="btn btn-primary btn-large">Manda avviso</a>
+    <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
+    <a data-dismiss="modal" href="#" class="btn btn-primary btn-large">Send notification</a>
   </div>
 </div>
 
