--- a/courses/app/views/admin_supervisors.scala.html
+++ b/courses/app/views/admin_supervisors.scala.html
@@ -121,7 +121,7 @@
         <input type="hidden" value="@editSupervisorForm("supervisorID").value" name="supervisorID"/>
       </fieldset>
     <div class="actions">
-      <a href="@routes.Admins.supervisors(supervisorId)" class="btn btn-large">Cancel</a> <!-- ricarico la pagina per riottenere i dati non modificati -->
+      <a href="@routes.Admins.supervisors(supervisorId)" class="btn btn-large">Cancel</a> <!-- refresh of the page for obtaining non-modified data -->
       <input type="submit" class="btn btn-large btn-primary" value="Submit">
     </div>
   }
@@ -192,7 +192,7 @@
 </div>
 
 
-<!--- LA RIMOZIONE DEI CORSI VERRA GESTITA NEL MODAL DETTAGLI -->
+<!--- courses deletion will be handled in the details modal -->
 } {
 
 } {
