--- a/courses/app/views/admin_suspended_students.scala.html
+++ b/courses/app/views/admin_suspended_students.scala.html
@@ -19,7 +19,7 @@
           <tr>
             <td>@student.firstName</td>
             <td>@student.lastName</td>
-            <td><a href="@routes.Admins.unsuspendStudent(student.userID.longValue)" >Riammetti</a></td>
+            <td><a href="@routes.Admins.unsuspendStudent(student.userID.longValue)" >Unsuspend</a></td>
           </tr>
         }
     </tbody>
@@ -29,7 +29,7 @@
 </div><!--span1 -->
 } {
 
-<!-- modal aggiuntivi -->
+<!-- extra modals -->
 
 } {
 
