--- a/courses/app/views/admin_base.scala.html
+++ b/courses/app/views/admin_base.scala.html
@@ -2,10 +2,10 @@
 
 @main { 
 
-<!---parte sx -->
+<!-- Left side -->
 
 <ul class="nav nav-list">
-  <li class="nav-header"><font size="4" face="Courier">Administrator</font></li> <!-- tag scala nome studente -->
+  <li class="nav-header"><font size="4" face="Courier">Administrator</font></li>
   <li><a  href="@routes.Admins.courses()" ><font size="3" face="Courier"></font>Courses</a></li>
   <li><a  href="@routes.Admins.students()" ><font size="3" face="Courier"></font>Students</a></li>
   <li><a  href="@routes.Admins.supervisors(-1)" ><font size="3" face="Courier"></font>Supervisors</a></li>
@@ -26,7 +26,7 @@
 
 } {
 
-Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
+Logged as: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
 
 } {
  
