--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -43,7 +43,7 @@
 
 } {
 
-Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
+Logged in as: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
 
 } {
  
