--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -7,9 +7,9 @@
 @additionalLinks
 
 <ul class="nav nav-list">
-  <li class="nav-header"><font size="4" face="Courier">Link utili</font></li>
-  <li><a href="http://ict.unitn.it/announcements"><font size="3" face="Courier">News e Avvisi</font></a></li>
-  <li><a href="http://ict.unitn.it/contacts"><font size="3" face="Courier">Contattaci</font></a></li>
+  <li class="nav-header"><font size="4" face="Courier">Useful links</font></li>
+  <li><a href="http://ict.unitn.it/announcements"><font size="3" face="Courier">News and announcements</font></a></li>
+  <li><a href="http://ict.unitn.it/contacts"><font size="3" face="Courier">Contact us</font></a></li>
 </ul>
 
 <div class="modal hide fade" id="windowTitleDialog" style="display: none; ">
@@ -64,7 +64,7 @@
 
 } { <!-- Parte centrale -->
 
-<h1>Aggiungi qualcosa qui</h1>
+<h1>Aggiungi qualcosa quil</h1>
 
 } { @authstate } {
  
