--- a/courses/app/views/common_studentCareer.scala.html
+++ b/courses/app/views/common_studentCareer.scala.html
@@ -5,11 +5,11 @@
 
 <!-- Fine dialog dei Dettagli Corso -->
 
-<!-- Parte centrale -->
+<!-- central part -->
 
 <div class="row-fluid">
   <div class="span6">
-    <h2>Carrer</h2>
+    <h2>Career</h2>
     <table class="table table-bordered">
       <thead>
         <tr>
@@ -48,6 +48,6 @@
   </div>
 </div>
 
-<!-- Fine parte centrale -->
+<!-- end of central part -->
 
 
