--- a/courses/app/views/coursedetails.scala.html
+++ b/courses/app/views/coursedetails.scala.html
@@ -6,7 +6,7 @@
 
 <div class="row" >
     <div class="span 4">
-        <p> NomeDocente </p>
+        <p> Professor name </p>
     </div>
 
 
@@ -19,7 +19,7 @@
 
 <div class="row" >
     <div class="span 4">
-        <p> ID corso </p>
+        <p> course ID </p>
     </div>
 
 
@@ -30,7 +30,7 @@
 
 <div class="row-fluid" >
     <div class="span 4">
-        <p> Data inizio </p>
+        <p> Star date </p>
     </div>
 
 
@@ -41,7 +41,7 @@
 
 <div class="row-fluid" >
     <div class="span 4">
-        <p> Aula </p>
+        <p> Classroom </p>
     </div>
 
 
@@ -52,7 +52,7 @@
 
 <div class="row-fluid" >
     <div class="span 4">
-        <p> Crediti </p>
+        <p> Credits </p>
     </div>
 
 
@@ -63,7 +63,7 @@
 
 <div class="row-fluid" >
     <div class="span 4">
-        <p> Anno Accademico </p>
+        <p> Academic year </p>
     </div>
 
 
@@ -74,7 +74,7 @@
 
 <div class="row-fluid" >
     <div class="span 4">
-        <p> Sito </p>
+        <p> Web site </p>
     </div>
 
 
@@ -86,20 +86,20 @@
 @if(course.isPaymentCompleted) {
     <div class="row-fluid" >
         <div class="span 4">
-            <p> Pagamento Effettuato </p>
+            <p> Paymend made </p>
         </div>
     </div>
 } else {
     <div class="row-fluid" >
         <div class="span 4">
-            <p> Pagamento non effettuato </p>
+            <p> Paymend not made </p>
         </div>
     </div>
 }
 
 <div class="row-fluid" >
     <div class="span 4">
-        <p> Note del Corso </p>
+        <p> Course notes </p>
 <!-- <p> Institution     @{course.institution} </p> -->
 <!--<p> isInManifesto     @{course.isInManifesto} </p>
 <p> isByUnitn @{course.isbyUNITN} </p>
