--- a/courses/app/views/examResultsform.scala.html
+++ b/courses/app/views/examResultsform.scala.html
@@ -6,9 +6,9 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th>Studente</th>
-            <th>Voto</th>
-            <th>Passato</th>
+            <th>Student</th>
+            <th>Grade</th>
+            <th>Result</th>
           </tr>
         </thead>
         <tbody>
