--- a/courses/app/views/students_base.scala.html
+++ b/courses/app/views/students_base.scala.html
@@ -2,11 +2,11 @@
 
 @main { 
 
-<!---parte sx -->
+<!---left side -->
 <ul class="nav nav-list">
-      <li class="nav-header"><font size="4" face="Courier">Pagine</font></li>
-      <li><a href="/student/studyplan"><font size="3" face="Courier">StudyPlan</font></a></li>
-      <li><a href="/student/career"><font size="3" face="Courier">Carriera</font></a></li>
+      <li class="nav-header"><font size="4" face="Courier">Pages</font></li>
+      <li><a href="/student/studyplan"><font size="3" face="Courier">Study plan</font></a></li>
+      <li><a href="/student/career"><font size="3" face="Courier">Career</font></a></li>
       
       @sideContents
 </ul>
