--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -22,7 +22,7 @@
     <a href="#" class="close" data-dismiss="modal">
       <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
     </a>
-    <h3>Richiesta di approvazione Study Plan</h3>
+    <h3>Study Plan approval request</h3>
   </div>
 
   <div class="modal-body">
@@ -34,7 +34,7 @@
     
 </div>
 
-<!-- Corpo della pagina -->
+<!-- page body -->
 
 @common_editableSP(user, student, studyplan, courses, courseForm)
 
