--- a/courses/app/views/externCourseFormModal.scala.html
+++ b/courses/app/views/externCourseFormModal.scala.html
@@ -6,7 +6,7 @@
         <a href="#" class="close" data-dismiss="modal">
             <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
         </a>
-        <h3>Aggiungi Nuovo Corso Esterno</h3>
+        <h3>Add new extern course</h3>
     </div>
     
     <div class="modal-body">
