--- a/courses/app/views/forbidden.scala.html
+++ b/courses/app/views/forbidden.scala.html
@@ -1,12 +1,12 @@
 @()
 
 @main {
-<!-- barrasinistra -->
+<!-- left side bar -->
 
 
 
 } {
-<!-- partecentrale -->
+<!-- central part -->
 
 Forbidden!
 
