--- a/courses/app/views/studentDetailsModal.scala.html
+++ b/courses/app/views/studentDetailsModal.scala.html
@@ -6,7 +6,7 @@
     <a href="#" class="close" data-dismiss="modal">
       <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
     </a>
-    <h3>Anagrafica di @student.fullName</h3>
+    <h3>@student.fullName's personal data</h3>
   </div>
   
   <div class="modal-body">
